--- a/HandEase/Menu/Storyboards/Menu.storyboard
+++ b/HandEase/Menu/Storyboards/Menu.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Menu View Controller-->
         <scene sceneID="yeJ-7U-37o">
             <objects>
-                <viewController id="Wlk-50-P2R" sceneMemberID="viewController">
+                <viewController id="Wlk-50-P2R" customClass="MenuViewController" customModule="HandEase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6tb-SZ-p8k">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -29,16 +29,34 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wix-5q-G2i">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="CUj-Wh-Vo0">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="942-tB-bgw" firstAttribute="top" secondItem="6tb-SZ-p8k" secondAttribute="top" id="99n-2d-ksN"/>
+                            <constraint firstItem="Uq0-vV-ZBo" firstAttribute="trailing" secondItem="wix-5q-G2i" secondAttribute="trailing" id="Iyj-F6-wjh"/>
                             <constraint firstItem="942-tB-bgw" firstAttribute="leading" secondItem="Uq0-vV-ZBo" secondAttribute="leading" id="bEA-nm-L1R"/>
+                            <constraint firstItem="Uq0-vV-ZBo" firstAttribute="bottom" secondItem="wix-5q-G2i" secondAttribute="bottom" id="kKK-g6-kTx"/>
+                            <constraint firstItem="wix-5q-G2i" firstAttribute="top" secondItem="6tb-SZ-p8k" secondAttribute="top" id="r7S-Tg-wrT"/>
                             <constraint firstItem="Uq0-vV-ZBo" firstAttribute="trailing" secondItem="942-tB-bgw" secondAttribute="trailing" id="trl-ZP-tbB"/>
                             <constraint firstItem="Uq0-vV-ZBo" firstAttribute="bottom" secondItem="942-tB-bgw" secondAttribute="bottom" id="uJW-nj-vxf"/>
+                            <constraint firstItem="wix-5q-G2i" firstAttribute="leading" secondItem="Uq0-vV-ZBo" secondAttribute="leading" id="yy9-Ia-g4N"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Uq0-vV-ZBo"/>
                     </view>
+                    <connections>
+                        <outlet property="cview" destination="wix-5q-G2i" id="8fj-jg-At1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sef-Lx-won" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
