--- a/HandEase/Base.lproj/Main.storyboard
+++ b/HandEase/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ZIG-Qm-L4U">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AtS-v0-oPx">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,33 +10,43 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Test View Controller-->
+        <!--Home Container View Controller-->
         <scene sceneID="8o5-0n-qrH">
             <objects>
-                <viewController id="ZIG-Qm-L4U" customClass="TestViewController" customModule="HandEase" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ZIG-Qm-L4U" customClass="HomeContainerViewController" customModule="HandEase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="htd-Gz-hii">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eUh-6F-0PB">
-                                <rect key="frame" x="164" y="318" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="openMenu:" destination="ZIG-Qm-L4U" eventType="touchUpInside" id="DZ2-bF-h1H"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cR8-3s-1xU">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="eUh-6F-0PB" firstAttribute="centerY" secondItem="htd-Gz-hii" secondAttribute="centerY" id="iTn-t8-cg4"/>
-                            <constraint firstItem="eUh-6F-0PB" firstAttribute="centerX" secondItem="htd-Gz-hii" secondAttribute="centerX" id="yCo-VM-xJF"/>
+                            <constraint firstItem="cR8-3s-1xU" firstAttribute="top" secondItem="xEQ-kv-1gP" secondAttribute="top" id="FcT-Vz-12a"/>
+                            <constraint firstItem="xEQ-kv-1gP" firstAttribute="bottom" secondItem="cR8-3s-1xU" secondAttribute="bottom" id="dOE-0t-ZKj"/>
+                            <constraint firstItem="cR8-3s-1xU" firstAttribute="width" secondItem="htd-Gz-hii" secondAttribute="width" id="k2I-fx-HBc"/>
+                            <constraint firstItem="cR8-3s-1xU" firstAttribute="centerX" secondItem="htd-Gz-hii" secondAttribute="centerX" id="mYa-4H-p7q"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="xEQ-kv-1gP"/>
                     </view>
+                    <navigationItem key="navigationItem" id="hhu-V1-UbD">
+                        <barButtonItem key="leftBarButtonItem" title="Menu" id="Sqc-ns-LOl">
+                            <connections>
+                                <action selector="openMenu:" destination="ZIG-Qm-L4U" id="2wE-Ut-j15"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="containerCenterX" destination="mYa-4H-p7q" id="xX4-uj-Ipo"/>
+                        <outlet property="containerView" destination="cR8-3s-1xU" id="BTl-9B-W7C"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I0m-bf-2Aj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-674" y="41"/>
+            <point key="canvasLocation" x="264.80000000000001" y="40.929535232383813"/>
         </scene>
         <!--Menu View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -73,7 +83,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="201" y="41"/>
+            <point key="canvasLocation" x="1140" y="40.929535232383813"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="UP9-1p-ysi">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AtS-v0-oPx" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="M36-KZ-ORF">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ZIG-Qm-L4U" kind="relationship" relationship="rootViewController" id="6ci-7W-bUa"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L1j-IQ-hFO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-674.39999999999998" y="40.929535232383813"/>
         </scene>
     </scenes>
 </document>
