--- a/HandEase/Menu/Views/MenuItemCollectionViewCell.xib
+++ b/HandEase/Menu/Views/MenuItemCollectionViewCell.xib
@@ -58,6 +58,7 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="360" height="78"/>
             <connections>
+                <outlet property="container" destination="igm-fV-95f" id="gLn-YI-pz9"/>
                 <outlet property="imgIcon" destination="JTl-qo-vIq" id="vqB-pO-up8"/>
                 <outlet property="lblTitle" destination="0dF-su-75y" id="QBd-CM-gjW"/>
             </connections>
