Tidied up Flow Controller logic and wrote tests.

--- a/HandEase/Container/Storyboards/Base.lproj/Container.storyboard
+++ b/HandEase/Container/Storyboards/Base.lproj/Container.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home Container View Controller-->
+        <!--Container View Controller-->
         <scene sceneID="8o5-0n-qrH">
             <objects>
-                <viewController storyboardIdentifier="homeContainer" automaticallyAdjustsScrollViewInsets="NO" id="ZIG-Qm-L4U" customClass="HomeContainerViewController" customModule="HandEase" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="homeContainer" automaticallyAdjustsScrollViewInsets="NO" id="ZIG-Qm-L4U" customClass="ContainerViewController" customModule="HandEase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="htd-Gz-hii">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
