--- a/HandEase/Exercises/Storyboard/Exercises.storyboard
+++ b/HandEase/Exercises/Storyboard/Exercises.storyboard
@@ -33,6 +33,9 @@
                                         <state key="normal" title="Menu">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="toggleMenu:" destination="9Az-Wl-NZR" eventType="touchUpInside" id="o2T-GZ-ZHq"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Exercises" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="85a-ow-5m4">
                                         <rect key="frame" x="130" y="12" width="116.5" height="44"/>
@@ -61,6 +64,7 @@
                             <constraint firstItem="sSq-jL-3aR" firstAttribute="top" secondItem="fTA-of-WpG" secondAttribute="top" id="wKq-QH-ZQL"/>
                             <constraint firstItem="wzr-2Z-Ci5" firstAttribute="centerY" secondItem="fTA-of-WpG" secondAttribute="centerY" id="z8e-Uq-Rxa"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="Nam-BK-asb"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F90-mM-sfR" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -90,6 +94,9 @@
                                         <state key="normal" title="Menu">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="toggleMenu:" destination="Ugh-U9-R5K" eventType="touchUpInside" id="XQC-A2-u3t"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All Exercises" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xaz-xd-Z2V">
                                         <rect key="frame" x="131.5" y="12" width="112" height="44"/>
