Got initial exercise list loading from remote source.

--- a/HandEase/Exercises/Storyboard/Exercises.storyboard
+++ b/HandEase/Exercises/Storyboard/Exercises.storyboard
@@ -18,12 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Exercises" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wzr-2Z-Ci5">
-                                <rect key="frame" x="137.5" y="323" width="100" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sSq-jL-3aR">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                 <subviews>
@@ -55,17 +49,33 @@
                                     <constraint firstItem="6LG-Cp-4l5" firstAttribute="top" secondItem="sSq-jL-3aR" secondAttribute="top" constant="12" id="gL1-GV-pjo"/>
                                 </constraints>
                             </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="xud-V4-Izx">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="RhD-XA-ZCR">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="sSq-jL-3aR" firstAttribute="leading" secondItem="fTA-of-WpG" secondAttribute="leading" id="9eQ-rm-3Sy"/>
-                            <constraint firstItem="wzr-2Z-Ci5" firstAttribute="centerX" secondItem="fTA-of-WpG" secondAttribute="centerX" id="mTs-OM-xQ8"/>
+                            <constraint firstItem="xud-V4-Izx" firstAttribute="top" secondItem="sSq-jL-3aR" secondAttribute="bottom" id="Cvk-wx-Jgd"/>
+                            <constraint firstAttribute="bottom" secondItem="xud-V4-Izx" secondAttribute="bottom" id="EvG-qh-LK9"/>
+                            <constraint firstItem="xud-V4-Izx" firstAttribute="trailing" secondItem="Nam-BK-asb" secondAttribute="trailing" id="RkQ-0c-aZ6"/>
+                            <constraint firstItem="xud-V4-Izx" firstAttribute="leading" secondItem="Nam-BK-asb" secondAttribute="leading" id="TaR-g5-HT0"/>
                             <constraint firstAttribute="trailing" secondItem="sSq-jL-3aR" secondAttribute="trailing" id="u7c-g0-wGD"/>
                             <constraint firstItem="sSq-jL-3aR" firstAttribute="top" secondItem="fTA-of-WpG" secondAttribute="top" id="wKq-QH-ZQL"/>
-                            <constraint firstItem="wzr-2Z-Ci5" firstAttribute="centerY" secondItem="fTA-of-WpG" secondAttribute="centerY" id="z8e-Uq-Rxa"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Nam-BK-asb"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="xud-V4-Izx" id="eR0-w0-WH2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F90-mM-sfR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -79,12 +89,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All Exercises" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gV3-Lb-mfz">
-                                <rect key="frame" x="139.5" y="323" width="96" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FtZ-UH-lOq">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                 <subviews>
@@ -116,17 +120,33 @@
                                     <constraint firstItem="OxQ-5G-oYA" firstAttribute="leading" secondItem="FtZ-UH-lOq" secondAttribute="leading" constant="16" id="h5L-b8-9Gb"/>
                                 </constraints>
                             </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="BSE-DV-lyj">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="b0y-5o-NC4">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="RsQ-fk-kSP" firstAttribute="bottom" secondItem="BSE-DV-lyj" secondAttribute="bottom" id="Jfp-hj-8TI"/>
                             <constraint firstItem="FtZ-UH-lOq" firstAttribute="top" secondItem="HEX-ht-RMC" secondAttribute="top" id="YDw-5x-AKO"/>
-                            <constraint firstItem="gV3-Lb-mfz" firstAttribute="centerX" secondItem="HEX-ht-RMC" secondAttribute="centerX" id="ban-O6-niJ"/>
+                            <constraint firstItem="BSE-DV-lyj" firstAttribute="top" secondItem="FtZ-UH-lOq" secondAttribute="bottom" id="anv-WI-A8L"/>
+                            <constraint firstItem="BSE-DV-lyj" firstAttribute="trailing" secondItem="RsQ-fk-kSP" secondAttribute="trailing" id="bNv-dV-fL3"/>
+                            <constraint firstItem="BSE-DV-lyj" firstAttribute="leading" secondItem="RsQ-fk-kSP" secondAttribute="leading" id="bSx-Ms-2Za"/>
                             <constraint firstItem="FtZ-UH-lOq" firstAttribute="leading" secondItem="HEX-ht-RMC" secondAttribute="leading" id="r99-Ab-mH2"/>
-                            <constraint firstItem="gV3-Lb-mfz" firstAttribute="centerY" secondItem="HEX-ht-RMC" secondAttribute="centerY" id="vPr-SS-H34"/>
                             <constraint firstAttribute="trailing" secondItem="FtZ-UH-lOq" secondAttribute="trailing" id="xNE-Cy-rbx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="RsQ-fk-kSP"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="BSE-DV-lyj" id="6sK-rf-858"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ROD-nu-JXs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
