--- a/HandEase/Menu/Views/MenuItemCollectionViewCell.xib
+++ b/HandEase/Menu/Views/MenuItemCollectionViewCell.xib
@@ -24,26 +24,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="360" height="78"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JTl-qo-vIq">
-                                <rect key="frame" x="16" y="16" width="46" height="46"/>
+                                <rect key="frame" x="16" y="16" width="45" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="JTl-qo-vIq" secondAttribute="height" multiplier="1:1" id="grM-WC-bHr"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dF-su-75y">
-                                <rect key="frame" x="78" y="16" width="266" height="46"/>
+                                <rect key="frame" x="77" y="16" width="267" height="46"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NwE-bt-4GX">
+                                <rect key="frame" x="16" y="75" width="328" height="1"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="UF5-DX-O2J"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="0dF-su-75y" firstAttribute="top" secondItem="igm-fV-95f" secondAttribute="top" constant="16" id="BCP-Oq-Gcu"/>
                             <constraint firstAttribute="bottom" secondItem="0dF-su-75y" secondAttribute="bottom" constant="16" id="CR4-Y5-EB5"/>
                             <constraint firstItem="JTl-qo-vIq" firstAttribute="top" secondItem="igm-fV-95f" secondAttribute="top" constant="16" id="Q5n-3L-Zgm"/>
-                            <constraint firstAttribute="bottom" secondItem="JTl-qo-vIq" secondAttribute="bottom" constant="16" id="T87-AA-jHr"/>
+                            <constraint firstItem="NwE-bt-4GX" firstAttribute="leading" secondItem="igm-fV-95f" secondAttribute="leading" constant="16" id="X2g-Hc-LJk"/>
+                            <constraint firstItem="NwE-bt-4GX" firstAttribute="top" secondItem="JTl-qo-vIq" secondAttribute="bottom" constant="14" id="ba1-rN-IVf"/>
                             <constraint firstItem="JTl-qo-vIq" firstAttribute="leading" secondItem="igm-fV-95f" secondAttribute="leading" constant="16" id="gVg-IJ-3aL"/>
                             <constraint firstItem="0dF-su-75y" firstAttribute="leading" secondItem="JTl-qo-vIq" secondAttribute="trailing" constant="16" id="jBZ-oR-25n"/>
+                            <constraint firstAttribute="trailing" secondItem="NwE-bt-4GX" secondAttribute="trailing" constant="16" id="rWS-uw-LYr"/>
+                            <constraint firstAttribute="bottom" secondItem="NwE-bt-4GX" secondAttribute="bottom" constant="2" id="wlB-jK-fSk"/>
                             <constraint firstAttribute="trailing" secondItem="0dF-su-75y" secondAttribute="trailing" constant="16" id="xGG-TS-ceL"/>
                         </constraints>
                     </view>
@@ -60,6 +70,7 @@
             <connections>
                 <outlet property="container" destination="igm-fV-95f" id="gLn-YI-pz9"/>
                 <outlet property="imgIcon" destination="JTl-qo-vIq" id="vqB-pO-up8"/>
+                <outlet property="keyLine" destination="NwE-bt-4GX" id="TbI-R4-Koc"/>
                 <outlet property="lblTitle" destination="0dF-su-75y" id="QBd-CM-gjW"/>
             </connections>
             <point key="canvasLocation" x="-12" y="30"/>
